# cogmemqa

./: .env.example  .gitignore  CoGMEM-QA_Phased_Block_Plan.md  DISSERTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
fixtures/: meridian_commits.json  meridian_parsed.json  meridian_spec.md
fixtures/meridian_app/: account_utils.py  main.py
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuditPanel.tsx  GraphCanvas.tsx  HealthPanel.tsx
schema/: cogmem_ontology.yaml  schema.yaml
scripts/: demo_summary.py  provision_schema.py  replay_meridian.py  validate_schema.py
sprints/v1/: PRD.md  TASKS.md
src/: agent_base.py  api.py  db.py  llm.py  memory_api.py  models.py  orchestrator.py  provisioner.py  retrieval_policies.py
tests/: conftest.py  test_agent_base.py  test_api.py  test_api_audit.py  test_api_expand.py  test_api_graph.py  test_audit_trail.py  test_commit_ingestion.py  test_coverage_gap.py  test_coverage_summary.py  test_demo_summary_script.py  test_e2e.py  test_e2e_phase2.py  test_e2e_phase3.py  test_e2e_phase4.py  test_e2e_phase5.py  test_functional_tester.py  test_impact_lookup.py  test_ingest.py  test_meridian_app.py  test_models.py  test_orchestrator.py  test_parsed_spec.py  test_provenance.py  test_provisioner.py  test_qa_supervisor.py  test_reconcile.py  test_replay_script.py  test_report_model.py  test_requirements_parser.py  test_retrieve.py  test_schema.py  test_security_summary.py  test_security_tester.py  test_test_case_generator.py
(+26 files in other folders)
